Created grid layout for about page main

--- a/src/app/features/about/pages/about/about.component.html
+++ b/src/app/features/about/pages/about/about.component.html
@@ -1,1 +1,97 @@
-<p>about works!</p>
+<div class="about-page-main" id="about-page-main">
+    <section class="introduction-section">
+        <div class="section-heading">
+            introduction
+        </div>
+        <div class="section-content">
+           <p>
+            Hi, my name is Yingi. I’m a passionate Frontend Developer with a strong focus on building high-performance single-page applications using Angular. Solid foundation in Responsive UI Designs, TypeScript, HTML, SCSS, Bootstrap, JavaScript, RESTful API integration, RxJs, SEO, and GitHub. 
+            </p>
+
+        </div>
+    </section>
+
+     <section class="skills-section">
+
+        <div class="section-heading">
+            skills set
+        </div>
+        
+        <div class="section-content">
+
+            <div class="skill-set-container ui-design">
+                <div class="set-heading">core skills</div>
+                <div class="set-container">
+                    <span class="skill"><i class="bi bi-caret-right-fill"></i>HTML5</span>
+                    <span class="skill"><i class="bi bi-caret-right-fill"></i>SCSS</span>
+                    <span class="skill"><i class="bi bi-caret-right-fill"></i>Bootstrap 5</span>
+                    <span class="skill"><i class="bi bi-caret-right-fill"></i>TypeScript</span>
+                    <span class="skill"><i class="bi bi-caret-right-fill"></i>JavaScript</span>
+                    <span class="skill"><i class="bi bi-caret-right-fill"></i>Angular 16+</span>
+                    
+                    
+                </div>
+            </div>
+            <div class="skill-set-container framework">
+                <div class="set-heading"> frameworks & libs</div>
+                 <div class="set-container">
+                    <span class="skill"><i class="bi bi-box-fill"></i> Angular Framework</span>
+                    <span class="skill"><i class="bi bi-box-fill"></i> RxJs </span>
+                    <span class="skill"><i class="bi bi-box-fill"></i> NgRx </span>
+                    <span class="skill"><i class="bi bi-box-fill"></i> Font Awesome</span>
+                    <span class="skill"><i class="bi bi-box-fill"></i> JavaScript</span>
+                    <span class="skill"><i class="bi bi-box-fill"></i> Angular 16+</span>
+                    
+                </div>
+            </div>
+            <div class="skill-set-container concepts">
+                <div class="set-heading">concepts</div>
+                <div class="set-container">
+                    <span class="skill"><i class="bi bi-lightbulb"></i> Responsive UIs</span>
+                    <span class="skill"><i class="bi bi-lightbulb"></i> RESTful API</span>
+                    <span class="skill"><i class="bi bi-lightbulb"></i> Unit Testing</span>
+                    <span class="skill"><i class="bi bi-lightbulb"></i> Performance</span>
+                    <span class="skill"><i class="bi bi-lightbulb"></i> SEO</span>
+                    <span class="skill"><i class="bi bi-lightbulb"></i> Version Control</span>
+
+                </div>
+            </div>
+            <div class="skill-set-container dev-tools">
+                <div class="set-heading">dev tools</div>
+                  <div class="set-container">
+                    <span class="skill"><i class="bi bi-clipboard-check-fill"></i> VS Code</span>
+                    <span class="skill"><i class="bi bi-clipboard-check-fill"></i> Angular CLI</span>
+                    <span class="skill"><i class="bi bi-clipboard-check-fill"></i> Dev-Tool</span>
+                    <span class="skill"><i class="bi bi-clipboard-check-fill"></i> Postman</span>
+                    <span class="skill"><i class="bi bi-clipboard-check-fill"></i> Karma & Jasmine</span>
+                    <span class="skill"><i class="bi bi-clipboard-check-fill"></i> Git bash</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+     <section class="certification-section">
+
+        <div class="section-heading">
+            certification
+        </div>
+
+        <div class="section-content">
+
+            <div class="skill-set-container">
+             <div class="set-heading"> skiils-based certifications </div>
+             
+                <div class="set-container">
+                    <div class="set-sub-container">
+                        <span class="skill"><i class="bi bi-award-fill"></i> 2025 - Angular Front End Developer (Udemy). </span>
+                        <span class="skill"><i class="bi bi-award-fill"></i> 2024 - Building Web Apps with Angular (Mercer Inter-Ed) </span>
+                    </div>
+                    <div class="set-sub-container">
+                         <span class="skill"><i class="bi bi-award-fill"></i> 2022 - Data Analysis with Python (NQF 5) (Cambridge Spark). </span>                    
+                         <span class="skill"><i class="bi bi-award-fill"></i> 2021 - Developing ASP.NET MVC5 Web Applications - (IT Academy). </span>
+                    </div>
+                </div>
+        </div>
+        </div>
+    </section>
+</div>
