--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div id="homepage-containter" class="homepage-containter">
+<div id="home-page-main" class="home-page-main">
   <div class="homepage-content-section cards-container">
     <div class="card card-ui">
       <div class="card-icon">
