--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div class="projectspage-container" id="projectspage-container">
+<div class="projects-page-main" id="projects-page-main">
   <section class="recent-project">
     <div class="section-heading">project details</div>
 
@@ -14,7 +14,6 @@
           </div>
 
           <div class="project-name">mabunda group</div>
-          
         </div>
 
         <div class="project-description project-detail-item">
@@ -30,106 +29,82 @@
             </p>
           </div>
           <div class="project-large-status">
-               <span class="current-status git-status">
-                <i class="bi bi-check-circle-fill"></i> 
-                GitHub
-                </span>
+            <span class="current-status git-status">
+              <i class="bi bi-check-circle-fill"></i>
+              GitHub
+            </span>
             <span class="current-status complete-status">
-              <i class="bi bi-check-circle-fill"></i> 
+              <i class="bi bi-check-circle-fill"></i>
               Completed
-              </span>
+            </span>
             <span class="current-status online-status">
-              <i class="bi bi-check-circle-fill"></i> 
+              <i class="bi bi-check-circle-fill"></i>
               Online
             </span>
-            </div>
+          </div>
         </div>
-
       </div>
 
       <div class="right-container">
-
         <div class="project-concepts project-detail-item">
           <div class="item-heading">Implemented concepts</div>
 
           <div class="list-container">
             <div class="item-details">
-            <ul>
-              <li>
-                <i class="bi bi-stop-circle-fill"></i> Responsive UI Design
-              </li>
-              <li><i class="bi bi-stop-circle-fill"></i> Angular Framework</li>
-              <li>
-                <i class="bi bi-stop-circle-fill"></i> RESTful API Integration
-              </li>
-             
-            </ul>
+              <ul>
+                <li>
+                  <i class="bi bi-stop-circle-fill"></i> Responsive UI Design
+                </li>
+                <li>
+                  <i class="bi bi-stop-circle-fill"></i> Angular Framework
+                </li>
+                <li><i class="bi bi-stop-circle-fill"></i> RESTful APIs</li>
+              </ul>
             </div>
             <div class="item-details">
-            <ul>
-              <li><i class="bi bi-stop-circle-fill"></i> Unit Tests</li>
-              <li>
-                <i class="bi bi-stop-circle-fill"></i> GitHub Source Control
-              </li>
-              <li>
-                <i class="bi bi-stop-circle-fill"></i>Search Engine
-                Optimization
-              </li>
-            </ul>
+              <ul>
+                <li><i class="bi bi-stop-circle-fill"></i> Unit Tests</li>
+                <li><i class="bi bi-stop-circle-fill"></i> GitHub and Git</li>
+                <li><i class="bi bi-stop-circle-fill"></i>SEO</li>
+              </ul>
+            </div>
           </div>
         </div>
-        </div>
-        
+
         <div class="project-features project-detail-item">
           <div class="item-heading">features</div>
 
           <div class="list-container">
             <div class="item-details">
-            <ul>
-              <li>
-                <i class="bi bi-check-square-fill"></i> Geo-location-based
-                weather
-              </li>
-              <li>
-                <i class="bi bi-check-square-fill"></i> Projects Photo Gallery
-              </li>
-              <li>
-                <i class="bi bi-check-square-fill"></i> Integrated Google Maps
-              </li>
-
-            </ul>
+              <ul>
+                <li>
+                  <i class="bi bi-check-square-fill"></i> Geo-location weather
+                </li>
+                <li><i class="bi bi-check-square-fill"></i> Photo Gallery</li>
+                <li><i class="bi bi-check-square-fill"></i> Google Maps</li>
+              </ul>
             </div>
             <div class="item-details">
               <ul>
-                <li>
-                  <i class="bi bi-check-square-fill"></i> Social media share
-                  buttons
-                </li>
-                <li>
-                  <i class="bi bi-check-square-fill"></i> Integrated Contact Form
-                </li>
+                <li><i class="bi bi-check-square-fill"></i> Share buttons</li>
+                <li><i class="bi bi-check-square-fill"></i> Contact Form</li>
 
-                <li>
-                  <i class="bi bi-check-square-fill"></i> Toggle themes
-                  (Dark/Light)
-                </li>
+                <li><i class="bi bi-check-square-fill"></i> Toggle themes</li>
               </ul>
             </div>
-         </div>
+          </div>
         </div>
-
-        </div>
-       </div>
-
+      </div>
+    </div>
   </section>
 
   <section class="featured-projects">
     <div class="section-heading">featured projects</div>
 
-    <div class="section-statement">
+    <!-- <div class="section-statement">
       Explore some of my recent project that were completed successfully. please
       visit my GitHub repository to explore the rest of other projects.
-    </div>
+    </div> -->
 
     <div class="cards-section">
       <div class="project-card">
