--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -8,7 +8,7 @@
   margin: 0 auto;
   padding: $spacing-sm;
   text-align: center;
- background-color: $light-default-bg-color;
+ background-color: $light-neutral-bg-color;
 
   display: grid;
   row-gap: 25px;
