--- a/src/app/layout/navbar/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar/navbar.component.html
@@ -11,7 +11,7 @@
     <li><a routerLink="/">Home</a></li>
     <li><a routerLink="/about">About</a></li>
     <li><a routerLink="/projects">Projects</a></li>
-    <li><a routerLink="/tech-stack">Tech Stack</a></li>
+    <li><a routerLink="/gallery">Gallery</a></li>
     <li><a routerLink="/contact">Contact</a></li>
   </ul>
 
