--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -17,14 +17,14 @@
 
         .item-introduction {
             p {
-                margin-left: $spacing-md + 2px;
+                margin-left: $spacing-xs;
 
                 img {
                     border-radius: $spacing-sm;
                 }
 
                 .introduction-img {
-                    border: 5px solid $light-border-color;
+                    border: 4px solid #e5e5e5;
                     float: left;
                     height: 60px;
                     margin: 0 12px 2px 0;
@@ -35,15 +35,13 @@
 
         .item-technology {
             ul {
-                margin-left: $spacing-md + 2px;
+                margin-left: $spacing-xs;
 
                 li {
                     list-style: square;
                     margin-bottom: $spacing-xs;
                     font-size: $font-size-md;
-                    margin-left: $spacing-md + 2px;
-
-
+                    margin-left: $spacing-md;
 
                     a {
                         color: $light-primary-font-color;
@@ -59,13 +57,13 @@
 
         .item-resources {
             ul {
-                margin-left: $spacing-md + 2px;
+                margin-left: $spacing-xs;
 
                 li {
                     list-style: square;
                     margin-bottom: $spacing-xs;
                     font-size: $font-size-md;
-                    margin-left: $spacing-md + 2px;
+                    margin-left: $spacing-md;
 
                     a {
                         color: $light-primary-font-color;
@@ -77,7 +75,6 @@
                     }
                 }
             }
-
         }
 
         .item-contact-details {
@@ -89,7 +86,7 @@
                     .item {
                         margin: $spacing-sm 0;
                         padding-left: $spacing-md;
-                        border-left: 1px solid lightgrey;
+                        border-left: 1px solid #e5e5e5;
 
                         a {
                             color: $light-primary-font-color;
@@ -119,8 +116,8 @@
         .footer-item {
             text-align: left;
             min-width: 25%;
-            // border: 1px solid $light-border-color;
-            background-color: $light-default-bg-color;
+            // border: 1px solid #e5e5e5;
+            background-color: $light-neutral-bg-color;
             padding: $spacing-md;
             border-radius: $spacing-sm;
 
@@ -132,9 +129,10 @@
     }
 
     .footer-bottom-section {
-        background-color: $light-default-bg-color;
+        background-color: $light-neutral-bg-color;
         padding: $spacing-md;
         border-radius: $spacing-sm;
+        font-size: $font-size-sm + 2px;
     }
 
     //Media queries for responsive design
