--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -6,7 +6,7 @@
     grid-template-columns: 1fr 2fr;
     justify-content: space-between;
     padding: 10px 0;
-    // border: 1px solid $light-border-color;
+    // border: 1px solid #e5e5e5;
     text-align: left;
     margin-bottom: -18px;
 
@@ -14,12 +14,12 @@
 
         display: flex;
         flex-direction: row;
-        //  border: 1px solid $light-border-color;
+        //  border: 1px solid #e5e5e5;
 
         .site-logo {
             margin-right: 15px;
             display: none;
-            //  border: 1px solid $light-border-color;
+            //  border: 1px solid #e5e5e5;
 
             img {
                 width: 100%;
@@ -29,7 +29,7 @@
         }
 
         .site-title-and-description {
-            // border: 1px solid $light-border-color;
+            // border: 1px solid #e5e5e5;
             width: 100%;
             margin-left: 10px;
 
@@ -109,12 +109,12 @@
 
                     .title-name {
                         font-size: $font-size-sm + 1px;
-                        // border: 1px solid $light-border-color;
+                        // border: 1px solid #e5e5e5;
                     }
 
                     .site-theme {
                         display: block;
-                        // border: 1px solid $light-border-color;
+                        // border: 1px solid #e5e5e5;
                     }
                 }
 
@@ -132,7 +132,7 @@
             // grid-template-columns: 2fr 1fr;
             // justify-content: space-between;
 
-            // border-top: 1px solid $light-border-color;
+            // border-top: 1px solid #e5e5e5;
             // padding-top: $spacing-sm + 4px;
 
             // .contact-details {
